# docs/swagger.yaml
@@ -1,11 +1,7 @@
 definitions:
   domain.Credentials:
     properties:
-      id:
-        type: integer
       login:
-        type: string
-      passHash:
         type: string
       password:
         type: string
@@ -13,6 +9,48 @@ definitions:
 info:
   contact: {}
 paths:
+  /login:
+    post:
+      consumes:
+      - application/json
+      description: Авторизует пользователя в системе и возвращает токен авторизации
+      parameters:
+      - description: Учетные данные пользователя
+        in: body
+        name: credentials
+        required: true
+        schema:
+          $ref: '#/definitions/domain.Credentials'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Успешная авторизация, возвращает статус и токен в заголовке
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Ошибка в формате запроса
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Неверный логин или пароль
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Авторизация пользователя
+      tags:
+      - auth
   /register:
     post:
       consumes:
