# internal/controllers/auth_controller.go
@@ -2,16 +2,16 @@ package controllers
 
 import (
 	"github.com/SmirnovND/gophkeeper/internal/domain"
-	"github.com/SmirnovND/gophkeeper/internal/usecase"
+	"github.com/SmirnovND/gophkeeper/internal/interfaces"
 	"github.com/SmirnovND/toolbox/pkg/paramsparser"
 	"net/http"
 )
 
 type AuthController struct {
-	AuthUseCase *usecase.AuthUseCase
+	AuthUseCase interfaces.AuthUseCase
 }
 
-func NewAuthController(AuthUseCase *usecase.AuthUseCase) *AuthController {
+func NewAuthController(AuthUseCase interfaces.AuthUseCase) *AuthController {
 	return &AuthController{
 		AuthUseCase: AuthUseCase,
 	}
@@ -37,6 +37,18 @@ func (a *AuthController) HandleRegisterJSON(w http.ResponseWriter, r *http.Reque
 	a.AuthUseCase.Register(w, credentials)
 }
 
+// HandleLoginJSON godoc
+// @Summary Авторизация пользователя
+// @Description Авторизует пользователя в системе и возвращает токен авторизации
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param credentials body domain.Credentials true "Учетные данные пользователя"
+// @Success 200 {object} map[string]string "Успешная авторизация, возвращает статус и токен в заголовке"
+// @Failure 400 {object} map[string]string "Ошибка в формате запроса"
+// @Failure 401 {object} map[string]string "Неверный логин или пароль"
+// @Failure 500 {object} map[string]string "Внутренняя ошибка сервера"
+// @Router /login [post]
 func (a *AuthController) HandleLoginJSON(w http.ResponseWriter, r *http.Request) {
 	credentials, err := paramsparser.JSONParse[domain.Credentials](w, r)
 	if err != nil {
